# work-data-week3

./: .gitignore  README.md  pyproject.toml
data/: dataset.csv
data/processed/: features.csv
models/registry/: latest.txt
models/runs/1767217727/metrics/: holdout_metrics.json
models/runs/1767217727/model/: model.joblib
models/runs/1767217727/predictions/: holdout_predictions.csv
notebooks/: w3d2_train_baseline.ipynb  week3_eda.ipynb
reports/: model_card.md
src/ml_baseline/: cli.py  metrics.py  predict.py  registry.py  schema.py  train.py
src/ml_baseline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
